--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.2)
-set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 
 
 project(i_hate_crc32)
 
 option(MultiThreading "MultiThreading" OFF)
 
-set(SOURCE_LIB lib/console.cpp lib/main_func.cpp)
+set(SOURCE_LIB lib/console.cpp lib/main_func.h)
 add_library(crc32 STATIC ${SOURCE_LIB})
 
 if(MultiThreading)
@@ -25,59 +25,4 @@ endif()
 
 
 
-add_subdirectory(
-    "${CMAKE_CURRENT_SOURCE_DIR}/googletest"
-    "googletest"
-)
-
-add_executable(
-    tests
-    tests/crc32tests.cpp
-)
-
-target_include_directories(
-    tests PRIVATE
-    "${CMAKE_CURRENT_SOURCE_DIR}/lib"
-)
-
-
-target_link_libraries(
-    tests PRIVATE
-    gtest gtest_main 
-)
-
-if (MSVC)
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-    target_compile_options(
-            tests PRIVATE 
-            /W4
-    )
-    if(MultiThreading)
-        target_compile_options(
-            i_hate_crc32_multithreading PRIVATE 
-            /W4
-        )
-    else()
-        target_compile_options(
-            i_hate_crc32 PRIVATE 
-            /W4
-        )
-    endif()
-
-else()
-    target_compile_options(
-        tests PRIVATE
-        -Wall -Wextra -pedantic -Werror
-    )
-    if(MultiThreading)
-        target_compile_options(
-            i_hate_crc32_multithreading PRIVATE 
-            -Wall -Wextra -pedantic -Werror
-        )
-    else()
-        target_compile_options(
-            i_hate_crc32 PRIVATE 
-            -Wall -Wextra -pedantic -Werror
-        )
-    endif()
-endif()
+add_subdirectory(tests)
